ATLAS-1676 merged ticket-counter & information-desk to contact-point